# Onecube

./: .env  .gitignore  Procfile  db.sqlite3  pyproject.toml  requirements.txt
col_films111/: settings.py
movie/: models.py  urls.py  views.py
movie/migrations/: 0014_alter_movie_category.py  0015_alter_movie_category_alter_movie_dislikes_and_more.py
static/script/: video_modal.js
templates/: add_movie.html  dashboard.html  index.html  library.html  video_modal.html
users/: views.py
