[tool.poetry]
name = "col-films-team-111"
version = "0.1.0"
description = ""
authors = ["specialist-avenger <ikegabrielc@gmail.com>"]
readme = "README.md"
packages = [{include = "col_films_team_111"}]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.5.2"
attrs = "22.1.0"
backports-zoneinfo = "0.2.1"
cachecontrol = "0.12.11"
cachy = "0.3.0"
certifi = "2022.6.15"
cffi = "1.15.1"
charset-normalizer = "2.1.0"
cleo = "1.0.0a5"
crashtest = "0.3.1"
cryptography = "38.0.1"
decorator = "4.4.2"
distlib = "0.3.6"
django = "4.1"
djangorestframework = "3.13.1"
dulwich = "0.20.50"
filelock = "3.8.0"
gunicorn = "20.1.0"
html5lib = "1.1"
idna = "3.3"
imageio = "2.21.1"
imageio-ffmpeg = "0.4.7"
importlib-metadata = "4.13.0"
importlib-resources = "5.10.0"
jaraco-classes = "3.2.3"
jeepney = "0.8.0"
jsonschema = "4.16.0"
keyring = "23.9.3"
lockfile = "0.12.2"
more-itertools = "9.0.0"
moviepy = "1.0.3"
msgpack = "1.0.4"
numpy = "1.23.1"
packaging = "21.3"
pexpect = "4.8.0"
pillow = "9.2.0"
pkginfo = "1.8.3"
pkgutil-resolve-name = "1.3.10"
platformdirs = "2.5.2"
poetry = "1.2.2"
poetry-core = "1.3.2"
poetry-plugin-export = "1.1.2"
proglog = "0.1.10"
psycopg2-binary = "2.9.3"
ptyprocess = "0.7.0"
pycparser = "2.21"
pylev = "1.4.0"
pyparsing = "3.0.9"
pyrsistent = "0.19.1"
python-dotenv = "0.21.0"
pytz = "2022.1"
requests = "2.28.1"
requests-toolbelt = "0.9.1"
secretstorage = "3.3.3"
shellingham = "1.5.0"
six = "1.16.0"
sqlparse = "0.4.2"
tomlkit = "0.11.6"
tqdm = "4.64.0"
urllib3 = "1.26.11"
virtualenv = "20.16.6"
webencodings = "0.5.1"
whitenoise = "6.2.0"
zipp = "3.10.0"
dj-database-url = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
