[tool.poetry]
name = "col-films-team-111"
version = "0.1.0"
description = ""
authors = ["specialist-avenger <ikegabrielc@gmail.com>"]
readme = "README.md"
packages = [{include = "col_films_team_111"}]

[tool.poetry.dependencies]
python = "^3.8"
asgiref = "3.5.2"
backports-zoneinfo = "0.2.1"
certifi = "2022.6.15"
charset-normalizer = "2.1.0"
decorator = "4.4.2"
django = "4.1"
djangorestframework = "3.13.1"
idna = "3.3"
imageio = "2.21.1"
imageio-ffmpeg = "0.4.7"
moviepy = "1.0.3"
numpy = "1.23.1"
pillow = "9.2.0"
proglog = "0.1.10"
pytz = "2022.1"
requests = "2.28.1"
sqlparse = "0.4.2"
tqdm = "4.64.0"
urllib3 = "1.26.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
